2003-12-24	Nathan Fisher <nfisher@users.sf.net>

	* download.shtml: Change server-side include from release.html to files.html.

2003-12-15  Earnie Boyd  <earnie@users.sf.net>

	* docs.shtml: Reword the pexports documentation to remove invalid links.

2003-10-14  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Clarify ``3rd-party DLLs''.

2003-09-16  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Add info on C++ file sizes.
	* lists.shtml: Add forums info.
	Add List Etiquette.
	* ssi/lsidebar.html: Update Mailing List & Forums.
	
2003-07-21  Earnie Boyd  <earnie@users.sf.net>

	* lists.shtml: Add verbiage about search forms.  Add gmane alternative
	search.

2003-06-30  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml: Correct ending tags throughout.
	* lists.shtml: Correct the archives link for mingw-dvlpr, mingw-editor
	and mingw-cvs.

2003-06-28  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml (Installing MinGW): Add content for individual tarball
	package installation.
	(Updating MinGW): Update with appropriate information.
	(Installing MSYS): Ditto.
	(Updating MSYS): Ditto.

2003-06-20  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml (Understanding MinGW Packages): Add more content.
	(Installing MinGW): Modify content into paragraphs.
	(Updating MInGW): Add section place holder.
	(Installing MSYS): Ditto.
	(Updating MSYS): Ditto.

2003-06-11  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml: Add a Contents section and unify the section titles.
	Modify verbiage explaining the packaging conventions.
	Add "Decompression and Unarchiving utilities" content header.
	Add "Installing MinGW" to Contents.

2003-06-06  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml: Change titles and add wording for MSYS.
	* index.shtml ssi/lsidebar.shtml: Move the SF Logo GIF to the left
	sidebar.

2003-05-30  Earnie Boyd  <earnie@users.sf.net>

	* ssi/release.html: Remove the CVS version as this file is now
	dynamically created.
