@@ -1,0 +1,377 @@
+<!-- ex: set tabstop=2 : -->	
+	<style type="text/css">
+		<!--
+		.current {
+		background-color: green;
+		}
+		.candidate {
+		background-color: yellow;
+		}
+		.bin {
+		background-color: #dddddd;
+		}
+		-->
+	</style>
+	<h2 style="color: red;">
+	  Warning: Due to some changes on SourceForge site this is a
+	  temporary and incomplete file listing. Until we have our
+	  scripts updated, please refer to the <a href="">SF file
+	  listing</a> if you cannot find the package you are looking
+	  for.
+	</h2>
+	<table>
+<!--=========================================================================-->
+<!--													Candidate										 							   	 -->
+	  <tr>
+		<td class="candidate" rowspan="4">
+		  Candidate
+		</td>
+		<td class="bin">
+		  Bin
+		</td>
+		<td class="bin">
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/MSYS-1.0.10-rc-3.exe?download">
+		  MSYS-1.0.10-rc-3.exe</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/msys-1.0.10-rc-src-1.tar.bz2?download">
+		  msys-1.0.10-rc-src-1.tar.bz2</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td class="bin">
+		  Bin
+		</td>
+		<td class="bin">
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/binutils-2.14.90-20030807-1.tar.gz?download">
+		  binutils-2.14.90-20030807-1.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/binutils-2.14.90-20030807-1-src.tar.gz?download">
+		  binutils-2.14.90-20030807-1-src.tar.gz</a>
+		</td>
+	  </tr>
+<!--=========================================================================-->
+<!--																Current																	 -->
+	  <tr class="bin">
+		<td class="current" rowspan="29">
+		  Current
+		</td>
+		<td class="bin">
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/mingw-runtime-3.2.tar.gz?download">
+		  mingw-runtime-3.2.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/mingw-runtime-3.2-src.tar.gz?download">
+		  mingw-runtime-3.2-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/MinGW-3.1.0-1.exe?download">
+		  MinGW-3.1.0-1.exe</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/w32api-2.4.tar.gz?download">
+		  w32api-2.4.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/w32api-2.4-src.tar.gz?download">
+		  w32api-2.4-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/mingw32-make-3.80.0-3.exe?download">
+		  mingw32-make-3.80.0-3.exe</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/mingw32-make-3.80.0-3-src.tar.bz2?download">
+		  mingw32-make-3.80.0-3-src.tar.bz2</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/binutils-2.13.90-20030111-1.tar.gz?download">
+		  binutils-2.13.90-20030111-1.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/binutils-2.13.90-20030111-1-src.tar.gz?download">
+		  binutils-2.13.90-20030111-1-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gdb-5.2.1-1.exe?download">
+		  gdb-5.2.1-1.exe</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gdb-5.2.1-1-src.tar.bz2?download">
+		  gdb-5.2.1-1-src.tar.bz2</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/mingw-utils-0.2.tar.gz?download">
+		  mingw-utils-0.2.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/mingw-utils-0.2-src.tar.gz?download">
+		  mingw-utils-0.2-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/msysDTK-1.0.1.exe?download">
+		  msysDTK-1.0.1.exe</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/msysDTK-1.0.1-src.tar.bz2?download">
+		  msysDTK-1.0.1-src.tar.bz2</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/tcltk-8.4.1-1.exe?download">
+		  tcltk-8.4.1-1.exe</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/tcltk-8.4.1-src-1.tar.bz2?download">
+		  tcltk-8.4.1-src-1.tar.bz2</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-ada-3.3.1-20030804-1.tar.gz?download">
+		  gcc-ada-3.3.1-20030804-1.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-ada-3.3.1-20030804-1-src.tar.gz?download">
+		  gcc-ada-3.3.1-20030804-1-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-core-3.3.1-20030804-1.tar.gz?download">
+		  gcc-core-3.3.1-20030804-1.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-core-3.3.1-20030804-1-src.tar.gz?download">
+		  gcc-core-3.3.1-20030804-1-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-g++-3.3.1-20030804-1.tar.gz?download">
+		  gcc-g++-3.3.1-20030804-1.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-g++-3.3.1-20030804-1-src.tar.gz?download">
+		  gcc-g++-3.3.1-20030804-1-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-g77-3.3.1-20030804-1.tar.gz?download">
+		  gcc-g77-3.3.1-20030804-1.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-g77-3.3.1-20030804-1-src.tar.gz?download">
+		  gcc-g77-3.3.1-20030804-1-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-java-3.3.1-20030804-1.tar.gz?download">
+		  gcc-java-3.3.1-20030804-1.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-java-3.3.1-20030804-1-src.tar.gz?download">
+		  gcc-java-3.3.1-20030804-1-src.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr class="bin">
+		<td>
+		  Bin
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-objc-3.3.1-20030804-1.tar.gz?download">
+		  gcc-objc-3.3.1-20030804-1.tar.gz</a>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  Src
+		</td>
+		<td>
+		  <a href=
+		  "http://prdownloads.sourceforge.net/mingw/gcc-objc-3.3.1-20030804-1-src.tar.gz?download">
+		  gcc-objc-3.3.1-20030804-1-src.tar.gz</a>
+		</td>
+	  </tr>
+<!-- TEMPLATE		   
+			<tr class="bin"><td>Bin</td>
+				<td><a href=""></a></td>
+			</tr>
+			<tr><td>Src</td>
+				<td><a href=""></a></td>
+			</tr>
+-->
+<!--=========================================================================-->
+<!--															Snapshot								 									 -->
+
+<!--
+<tr><td>Snapshot</td></tr>
+-->
+	</table>
