@@ -1,5 +1,9 @@
 2003-12-24	Nathan Fisher <nfisher@users.sf.net>
 
+	* ssi/files.html: Add to CVS and ran through HTML tidy.
+
+2003-12-24	Nathan Fisher <nfisher@users.sf.net>
+
 	* download.shtml: Change server-side include from release.html to files.html.
 
 2003-12-15  Earnie Boyd  <earnie@users.sf.net>
